--- a/style.css
+++ b/style.css
@@ -1,123 +1,122 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
-    font-family: "lora", sans-serif;
-    background-color: #FFF8E7;
+  font-family: "lora", sans-serif;
+  background-color: #fff8e7;
 
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-h2, h3 {
-    color: #5E432E;
+h2,
+h3 {
+  color: #5e432e;
 }
 
 header {
-    display: inline;
+  display: inline;
 }
 .atas {
-    color: white;
-    font-size: 20px;
-    padding: 60px;
-    text-align: center;
-    background-color:#556B2F ;
+  color: white;
+  font-size: 20px;
+  padding: 60px;
+  text-align: center;
+  background-color: #556b2f;
 }
 
-
 #content {
-    flex: 5;
+  flex: 5;
 
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 1rem 2rem;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem 2rem;
 }
 
 aside {
-    flex: 1;
+  flex: 1;
 }
 
 @media screen and (max-width: 1200px) {
-    main {
-        flex-flow: column nowrap;
-
-    }
-
-    main aside {
-        align-self: center;
-    }
+  main {
+    flex-flow: column nowrap;
   }
 
-  @media screen and (max-width: 768px) {
-    nav ul {
-        justify-content: center;
-    }
+  main aside {
+    align-self: center;
+  }
+}
 
-    main aside {
-        align-self: stretch;
-    }
+@media screen and (max-width: 768px) {
+  nav ul {
+    justify-content: center;
   }
 
+  main aside {
+    align-self: stretch;
+  }
+}
 
 main {
-    padding: 20px;
-    display: flex;
-    gap: 1.5rem;
+  padding: 20px;
+  display: flex;
+  gap: 1.5rem;
 }
 
 footer {
-    background-color: #556B2F;
-    text-align: center;
-    padding: 20px;
-    color: white;
-    font-weight: bold;
+  background-color: #556b2f;
+  text-align: center;
+  padding: 20px;
+  color: white;
+  font-weight: bold;
 }
 
 nav {
-    background-color: #e3b605;
-    padding: 5px;
-    position: sticky;
-    top: 0;
-  }
+  background-color: #e3b605;
+  padding: 5px;
+  position: sticky;
+  top: 0;
+}
 
 nav a {
-    font-size: 18px;
-    font-weight: 300;
-    color: white;
-    text-decoration: none;
+  font-size: 1.2vw;
+  font-weight: 300;
+  color: white;
+  text-decoration: none;
 }
 
 nav a:hover {
-    font-weight: bold;
-    color: #3D2F2F;
+  font-weight: bold;
+  color: #3d2f2f;
 }
 
 nav ul {
-    padding-inline: 4rem;
-    display: flex;
-    gap: 2rem;
+  padding-inline: 4rem;
+  display: flex;
+  gap: 2rem;
 }
 
 nav li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .profil header {
-    text-align: center;
+  text-align: center;
 }
 
 .img {
-    width: 100%;
-    max-height: 300PX;
-    object-fit: cover;
-    object-position: center;
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .profil img {
-    width: 200px;
+  width: 200px;
 }
 
-.card, .profil {
+.card,
+.profil {
   box-shadow: 0 4px 8px 4px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 
@@ -125,5 +124,5 @@ nav li {
 }
 
 .infor {
-    text-align: center;
+  text-align: center;
 }
