--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ aside {
 @media screen and (max-width: 768px) {
   nav ul {
     justify-content: center;
+    font-size: 1vw;
   }
 
   main aside {
