--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ aside {
 @media screen and (max-width: 768px) {
   nav ul {
     justify-content: center;
-    font-size: 18vw;
   }
 
   main aside {
@@ -80,7 +79,7 @@ nav {
 }
 
 nav a {
-  font-size: 1.2vw;
+  font-size: 18px;
   font-weight: 300;
   color: white;
   text-decoration: none;
